// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfidencePills (Bundle C §5) snapshot — Price pill hidden, mixed strengths 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "paddingVertical": 4,
    }
  }
  testID="confidence-pills"
>
  <View
    accessibilityRole="button"
    accessible={true}
    activeOpacity={0.7}
    onPress={[Function]}
    testID="confidence-pills-reviews"
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F8F8FA",
          "borderColor": "#E5E7EB",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            },
            {
              "backgroundColor": "#10B981",
            },
          ]
        }
        testID="confidence-pills-reviews-dot"
      />
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        <Text>
          results.confidence.pill.reviews
        </Text>
         · 
        results.confidence.level.high
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    activeOpacity={0.7}
    onPress={[Function]}
    testID="confidence-pills-specs"
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F8F8FA",
          "borderColor": "#E5E7EB",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            },
            {
              "backgroundColor": "#F59E0B",
            },
          ]
        }
        testID="confidence-pills-specs-dot"
      />
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        <Text>
          results.confidence.pill.specs
        </Text>
         · 
        results.confidence.level.medium
      </Text>
    </View>
  </View>
</View>
`;

exports[`ConfidencePills (Bundle C §5) snapshot — all 3 strong, no hide 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "paddingVertical": 4,
    }
  }
  testID="confidence-pills"
>
  <View
    accessibilityRole="button"
    accessible={true}
    activeOpacity={0.7}
    onPress={[Function]}
    testID="confidence-pills-price"
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F8F8FA",
          "borderColor": "#E5E7EB",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            },
            {
              "backgroundColor": "#10B981",
            },
          ]
        }
        testID="confidence-pills-price-dot"
      />
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        <Text>
          results.confidence.pill.price
        </Text>
         · 
        results.confidence.level.high
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    activeOpacity={0.7}
    onPress={[Function]}
    testID="confidence-pills-reviews"
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F8F8FA",
          "borderColor": "#E5E7EB",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            },
            {
              "backgroundColor": "#10B981",
            },
          ]
        }
        testID="confidence-pills-reviews-dot"
      />
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        <Text>
          results.confidence.pill.reviews
        </Text>
         · 
        results.confidence.level.high
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessible={true}
    activeOpacity={0.7}
    onPress={[Function]}
    testID="confidence-pills-specs"
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#F8F8FA",
          "borderColor": "#E5E7EB",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            },
            {
              "backgroundColor": "#10B981",
            },
          ]
        }
        testID="confidence-pills-specs-dot"
      />
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        <Text>
          results.confidence.pill.specs
        </Text>
         · 
        results.confidence.level.high
      </Text>
    </View>
  </View>
</View>
`;
